Darknet may be too deep for MNIST. TODO : try shalow darknet

--- a/YOLO_MNIST_Localization.ipynb
+++ b/YOLO_MNIST_Localization.ipynb
@@ -6,7 +6,7 @@
       "name": "YOLO_MNIST_Localization.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMiaJVwpzn1Iq2NZ2uelS/q",
+      "authorship_tag": "ABX9TyPikJFriw0fC0C+uV4X1spw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2054,22 +2054,72 @@
     {
       "cell_type": "code",
       "source": [
+        "# pool of square window of size=3, stride=2\n",
+        "m = nn.MaxPool2d(2, stride=2)\n",
+        "\n",
+        "input = torch.randn(20, 16, 32, 32)\n",
+        "output = m(input)\n",
+        "output.shape\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8UdMua5a4QC9",
+        "outputId": "e89f103e-bc1c-4f97-b59f-16c2dd63fa09"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([20, 16, 16, 16])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "class YoloV1(nn.Module):\n",
         "    def __init__(self, in_channels=1):\n",
         "        super(YoloV1, self).__init__()\n",
         "        self.darknet = torch.nn.Sequential()\n",
-        "        self.darknet.add_module(f\"CNNBlock_1\",CNNBlock(in_channels=in_channels, out_channels=64, stride=2, kernel_size=7))\n",
+        "        self.darknet.add_module(f\"CNNBlock_1\",CNNBlock(in_channels=in_channels, out_channels=64, stride=2, kernel_size=7, padding=3))\n",
         "        self.darknet.add_module(f\"MaxPool_1\", torch.nn.MaxPool2d(kernel_size=2, stride=2))\n",
-        "        self.darknet.add_module(f\"CNNBlock_2\",CNNBlock(in_channels=64, out_channels=192, stride=2, kernel_size=3))\n",
+        "        self.darknet.add_module(f\"CNNBlock_2\",CNNBlock(in_channels=64, out_channels=192, stride=1, kernel_size=3, padding=1))\n",
         "        self.darknet.add_module(f\"MaxPool_2\", torch.nn.MaxPool2d(kernel_size=2, stride=2))\n",
-        "        channels = [128, 256, 512]\n",
+        "        \n",
+        "        channels = [192, 128, 256, 256, 512]\n",
         "        kernels = [1,3,1,3]\n",
+        "        paddings = [0,1,0,1]\n",
+        "        k = 2\n",
+        "        i = 2\n",
+        "        for it in range(1,len(channels)):\n",
+        "            self.darknet.add_module(f\"CNNBlock_{k}\",CNNBlock(in_channels=channels[it-1], out_channels=channels[it], stride=1, kernel_size=kernels[it], padding=paddings[it]))\n",
+        "            k += 1\n",
+        "        self.darknet.add_module(f\"MaxPool_{i+1}\", torch.nn.MaxPool2d(kernel_size=2, stride=2))\n",
         "\n",
-        "        for k in zip(channels, kernels):\n",
-        "            self.darknet.add_module(f\"CNNBlock_{k}\",CNNBlock(in_channels=64, out_channels=192, stride=2, kernel_size=3))\n",
-        "            self.darknet.add_module(f\"MaxPool_2\", torch.nn.MaxPool2d(kernel_size=2, stride=2))\n",
+        "        channels = [512, 256, 512, 256, 512, 256, 512, 256, 512, 1024]\n",
+        "        kernels = [1,3,1,3,1,3,1,3,1,3]\n",
+        "        paddings = [0,1,0,1]\n",
+        "        for it in range(1,len(channels)):\n",
+        "            self.darknet.add_module(f\"CNNBlock_{k}\",CNNBlock(in_channels=channels[it-1], out_channels=channels[it], stride=1, kernel_size=kernels[it]))\n",
+        "            k += 1\n",
+        "        self.darknet.add_module(f\"MaxPool_{i+1}\", torch.nn.MaxPool2d(kernel_size=2, stride=2))\n",
         "\n",
+        "        channels = [1024, 512, 1024, 512, 1024, 1024]\n",
+        "        kernels = [1, 3, 3, 3]\n",
+        "        for it in range(1,len(channels)):\n",
+        "            self.darknet.add_module(f\"CNNBlock_{k}\",CNNBlock(in_channels=channels[it-1], out_channels=channels[it], stride=1, kernel_size=kernels[it]))\n",
+        "            k += 1\n",
+        "        self.darknet.add_module(f\"MaxPool_{i+1}\", torch.nn.MaxPool2d(kernel_size=2, stride=2))\n",
         "\n",
+        "        ...\n",
         "\n",
         "        \n",
         "        self.CNNBlock3 = CNNBlock(in_channels=64, out_channels=192, stride=2, kernel_size=7)\n",
