Major modifications. See below.
- Add a method to convert any relative coord to absolute coord in the MNIST model class
- Note : convert cell relative coords to absolute has not been check.
- Add IoU method -> it works with 2 true_bbox (IoU=1). Still working on generalizing IoU to pred_bbox

--- a/YOLO_MNIST_Localization.ipynb
+++ b/YOLO_MNIST_Localization.ipynb
@@ -389,7 +389,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 210,
+      "execution_count": 349,
       "metadata": {
         "id": "M7VztqFE71JZ"
       },
@@ -453,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 211,
+      "execution_count": 350,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -826,7 +826,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 307,
+      "execution_count": 431,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -871,18 +871,164 @@
         "        )\n",
         "        return output\n",
         "\n",
+        "    def _relative2absolute(self, bbox_relative, isGroundTruth):\n",
+        "        if isGroundTruth :\n",
+        "            \"\"\"cx, cy are already relative to the image size\"\"\"\n",
+        "            cx = bbox_relative[:,2]\n",
+        "            cy = bbox_relative[:,3]\n",
+        "            rw = bbox_relative[:,4]\n",
+        "            rh = bbox_relative[:,5]\n",
+        "\n",
+        "            cx_abs = self.sizeHW * cx\n",
+        "            cy_abs = self.sizeHW * cy\n",
+        "            x_min = cx_abs - (self.sizeHW * (rw/2))\n",
+        "            y_min = cy_abs - (self.sizeHW * (rh/2))\n",
+        "            x_max = cx_abs + (self.sizeHW * (rw/2))\n",
+        "            y_max = cy_abs + (self.sizeHW * (rh/2))\n",
+        "\n",
+        "            bbox_absolute = torch.stack((x_min, y_min, x_max, y_max), dim=-1)\n",
+        "            return bbox_absolute\n",
+        "\n",
+        "        else : \n",
+        "            \"\"\"cx, cy are relative to the cell\"\"\"\n",
+        "            cx = bbox_relative[:,:,:,0]\n",
+        "            cy = bbox_relative[:,:,:,1]\n",
+        "            rw = bbox_relative[:,:,:,2]\n",
+        "            rh = bbox_relative[:,:,:,3]\n",
+        "            for i in range(len(bbox_relative)):\n",
+        "                for j in range(len(bbox_relative)):\n",
+        "                    cx[:,i,j] = bbox_relative[:,i,j,1] * self.S + (i * self.S)\n",
+        "                    cy[:,i,j] = bbox_relative[:,i,j,2] * self.S + (j * self.S)\n",
+        "\n",
+        "        bbox_absolute = torch.concat((x_min, y_min, x_max, y_max), dim=-1)\n",
+        "        return bbox_absolute\n",
+        "\n",
+        "    def intersection_over_union(self, pred_box, true_box):\n",
+        "        \"\"\"\n",
+        "        args:\n",
+        "        pred_box -> shape : [N x S x S x 4]\n",
+        "        true_box -> shape : [N x 4]\n",
+        "        \"\"\"\n",
+        "        \n",
+        "        pred_box = self._relative2absolute(pred_box, True)\n",
+        "        true_box = self._relative2absolute(true_box, True)\n",
+        "        \n",
+        "\n",
+        "        ############ A REVOIR #################\n",
+        "        \"\"\"\n",
+        "        Le true box est OK mais le pred_box doit tenir compte qu'on injecte des \n",
+        "        cellules de grille à chaque fois donc un tensor Nx6x6...\n",
+        "        La méthode doit renvoyer 6x6xB = 6x6x1 IoU numbers (je crois...)\n",
+        "        \"\"\"\n",
+        "        # xmin_pred, ymin_pred, xmax_pred, ymax_pred = pred_box\n",
+        "        # xmin_true, ymin_true, xmax_true, ymax_true = true_box\n",
+        "\n",
+        "        xmin_pred = pred_box[:,0]\n",
+        "        ymin_pred = pred_box[:,1]\n",
+        "        xmax_pred = pred_box[:,2]\n",
+        "        ymax_pred = pred_box[:,3]\n",
+        "\n",
+        "        xmin_true = true_box[:,0]\n",
+        "        ymin_true = true_box[:,1]\n",
+        "        xmax_true = true_box[:,2]\n",
+        "        ymax_true = true_box[:,3]\n",
+        "\n",
+        "        smoothing_factor = 1e-10\n",
+        "\n",
+        "        xmin_overlap = torch.maximum(xmin_pred, xmin_true)\n",
+        "        xmax_overlap = torch.minimum(xmax_pred, xmax_true)\n",
+        "        ymin_overlap = torch.maximum(ymin_pred, ymin_true)\n",
+        "        ymax_overlap = torch.minimum(ymax_pred, ymax_true)\n",
+        "\n",
+        "        ##########################################\n",
+        "\n",
+        "        pred_box_area = (xmax_pred - xmin_pred) * (ymax_pred - ymin_pred)\n",
+        "        true_box_area = (xmax_true - xmin_true) * (ymax_true - ymin_true)\n",
+        "\n",
+        "        overlap_area = torch.maximum((xmax_overlap - xmin_overlap), torch.Tensor([0]))  * np.maximum((ymax_overlap - ymin_overlap), torch.Tensor([0]))\n",
+        "        union_area = (pred_box_area + true_box_area) - overlap_area\n",
+        "        \n",
+        "        iou = (overlap_area + smoothing_factor) / (union_area + smoothing_factor)\n",
+        "\n",
+        "        return iou\n",
+        "    \n",
         "    def forward(self, input):\n",
         "        x = self.seq(input)\n",
         "        x = self.fcs(x)\n",
         "        x = x.view(x.size(0), self.S, self.S, self.B * 5 + self.C)\n",
-        "        bbx_coord = x[:,:,:,0:5]\n",
+        "        pc = x[:,:,:,1]\n",
+        "        bbx_coord = x[:,:,:,1:5]\n",
         "        classifier = x[:,:,:,5:]\n",
-        "        return bbx_coord, classifier"
+        "        return pc, bbx_coord, classifier"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 310,
+      "execution_count": 432,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "tensor(1.)"
+            ]
+          },
+          "execution_count": 432,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "model_MNIST = YoloMNIST(sizeHW=75, S=6, C=10, B=1)\n",
+        "model_MNIST.intersection_over_union(k[2], k[2])[43]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 406,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "torch.Size([64, 6])"
+            ]
+          },
+          "execution_count": 406,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "for k in training_dataset:\n",
+        "    break\n",
+        "\n",
+        "k[2].shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 366,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "tensor([0.0555, 0.0245, 0.6933, 0.3067, 0.3733, 0.3733])"
+            ]
+          },
+          "execution_count": 366,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "a[2]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 374,
       "metadata": {},
       "outputs": [
         {
@@ -901,58 +1047,6 @@
             "    weight_decay: 0\n",
             ")\n"
           ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "==========================================================================================\n",
-              "Layer (type:depth-idx)                   Output Shape              Param #\n",
-              "==========================================================================================\n",
-              "YoloMNIST                                [64, 6, 6, 5]             --\n",
-              "├─Sequential: 1-1                        [64, 128, 6, 6]           --\n",
-              "│    └─CNNBlock: 2-1                     [64, 32, 37, 37]          --\n",
-              "│    │    └─Conv2d: 3-1                  [64, 32, 37, 37]          1,568\n",
-              "│    │    └─BatchNorm2d: 3-2             [64, 32, 37, 37]          64\n",
-              "│    │    └─LeakyReLU: 3-3               [64, 32, 37, 37]          --\n",
-              "│    └─MaxPool2d: 2-2                    [64, 32, 18, 18]          --\n",
-              "│    └─CNNBlock: 2-3                     [64, 128, 16, 16]         --\n",
-              "│    │    └─Conv2d: 3-4                  [64, 128, 16, 16]         36,864\n",
-              "│    │    └─BatchNorm2d: 3-5             [64, 128, 16, 16]         256\n",
-              "│    │    └─LeakyReLU: 3-6               [64, 128, 16, 16]         --\n",
-              "│    └─MaxPool2d: 2-4                    [64, 128, 8, 8]           --\n",
-              "│    └─CNNBlock: 2-5                     [64, 64, 8, 8]            --\n",
-              "│    │    └─Conv2d: 3-7                  [64, 64, 8, 8]            8,192\n",
-              "│    │    └─BatchNorm2d: 3-8             [64, 64, 8, 8]            128\n",
-              "│    │    └─LeakyReLU: 3-9               [64, 64, 8, 8]            --\n",
-              "│    └─CNNBlock: 2-6                     [64, 128, 6, 6]           --\n",
-              "│    │    └─Conv2d: 3-10                 [64, 128, 6, 6]           73,728\n",
-              "│    │    └─BatchNorm2d: 3-11            [64, 128, 6, 6]           256\n",
-              "│    │    └─LeakyReLU: 3-12              [64, 128, 6, 6]           --\n",
-              "│    └─CNNBlock: 2-7                     [64, 128, 6, 6]           --\n",
-              "│    │    └─Conv2d: 3-13                 [64, 128, 6, 6]           147,456\n",
-              "│    │    └─BatchNorm2d: 3-14            [64, 128, 6, 6]           256\n",
-              "│    │    └─LeakyReLU: 3-15              [64, 128, 6, 6]           --\n",
-              "├─Sequential: 1-2                        [64, 540]                 --\n",
-              "│    └─Flatten: 2-8                      [64, 4608]                --\n",
-              "│    └─Linear: 2-9                       [64, 4096]                18,878,464\n",
-              "│    └─LeakyReLU: 2-10                   [64, 4096]                --\n",
-              "│    └─Linear: 2-11                      [64, 540]                 2,212,380\n",
-              "==========================================================================================\n",
-              "Total params: 21,359,612\n",
-              "Trainable params: 21,359,612\n",
-              "Non-trainable params: 0\n",
-              "Total mult-adds (G): 2.63\n",
-              "==========================================================================================\n",
-              "Input size (MB): 1.44\n",
-              "Forward/backward pass size (MB): 94.42\n",
-              "Params size (MB): 85.44\n",
-              "Estimated Total Size (MB): 181.30\n",
-              "=========================================================================================="
-            ]
-          },
-          "execution_count": 310,
-          "metadata": {},
-          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -967,8 +1061,15 @@
         "classification_loss = nn.CrossEntropyLoss()\n",
         "\n",
         "print(optimizer)\n",
-        "summary(model_MNIST, input_size = (BATCH_SIZE,1,75,75))"
+        "summary(model_MNIST, input_size = (BATCH_SIZE,1,75,75));"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
@@ -1082,7 +1183,7 @@
         "        for i in range(size_grid):\n",
         "            for j in range(size_grid):\n",
         "                class_loss = classification_loss(label_preds, labels)\n",
-        "                box_loss = regression_loss(bbox_coords_preds, bbox_coords[:3])\n",
+        "                box_loss = regression_loss(bbox_coords_preds[1:], bbox_coords[:3])\n",
         "                pc_loss = isDigit_loss(pc_preds, pc)\n",
         "        \n",
         "        ### TODO \n",
@@ -1165,7 +1266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 314,
+      "execution_count": 315,
       "metadata": {},
       "outputs": [
         {
@@ -1174,7 +1275,7 @@
               "220.0"
             ]
           },
-          "execution_count": 314,
+          "execution_count": 315,
           "metadata": {},
           "output_type": "execute_result"
         }
