Working on intersection_over_union méthod.

--- a/YOLO_MNIST_Localization.ipynb
+++ b/YOLO_MNIST_Localization.ipynb
@@ -578,21 +578,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 133,
       "metadata": {},
-      "outputs": [
-        {
-          "ename": "NameError",
-          "evalue": "name 'torch' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[1;32m/Users/thierryksstentini/Documents/Python_divers/GitHub/Food_Recognition/YOLO_MNIST_Localization.ipynb Cellule 15\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/thierryksstentini/Documents/Python_divers/GitHub/Food_Recognition/YOLO_MNIST_Localization.ipynb#X20sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mYoloMNIST\u001b[39;00m(torch\u001b[39m.\u001b[39mnn\u001b[39m.\u001b[39mModule):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/thierryksstentini/Documents/Python_divers/GitHub/Food_Recognition/YOLO_MNIST_Localization.ipynb#X20sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, sizeHW, S, C, B):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/thierryksstentini/Documents/Python_divers/GitHub/Food_Recognition/YOLO_MNIST_Localization.ipynb#X20sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m         \u001b[39msuper\u001b[39m(YoloMNIST, \u001b[39mself\u001b[39m)\u001b[39m.\u001b[39m\u001b[39m__init__\u001b[39m()\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "class YoloMNIST(torch.nn.Module):\n",
         "    def __init__(self, sizeHW, S, C, B):\n",
@@ -635,7 +623,7 @@
         "        )\n",
         "        return output\n",
         "\n",
-        "    def _relative2absolute(self, bbox_relative, isGroundTruth):\n",
+        "    def _relative2absolute(self, bbox_relative, isGroundTruth, idx_cell_x=None, idx_cell_y=None):\n",
         "        if isGroundTruth :\n",
         "            \"\"\"cx, cy are already relative to the image size\"\"\"\n",
         "            cx = bbox_relative[:,2]\n",
@@ -643,49 +631,39 @@
         "            rw = bbox_relative[:,4]\n",
         "            rh = bbox_relative[:,5]\n",
         "\n",
-        "            cx_abs = self.sizeHW * cx\n",
-        "            cy_abs = self.sizeHW * cy\n",
-        "            x_min = cx_abs - (self.sizeHW * (rw/2))\n",
-        "            y_min = cy_abs - (self.sizeHW * (rh/2))\n",
-        "            x_max = cx_abs + (self.sizeHW * (rw/2))\n",
-        "            y_max = cy_abs + (self.sizeHW * (rh/2))\n",
-        "\n",
-        "            bbox_absolute = torch.stack((x_min, y_min, x_max, y_max), dim=-1)\n",
-        "            return bbox_absolute\n",
-        "\n",
         "        else : \n",
         "            \"\"\"cx, cy are relative to the cell\"\"\"\n",
-        "            cx = bbox_relative[:,:,:,0]\n",
-        "            cy = bbox_relative[:,:,:,1]\n",
-        "            rw = bbox_relative[:,:,:,2]\n",
-        "            rh = bbox_relative[:,:,:,3]\n",
-        "            for i in range(len(bbox_relative)):\n",
-        "                for j in range(len(bbox_relative)):\n",
-        "                    cx[:,i,j] = bbox_relative[:,i,j,1] * self.S + (i * self.S)\n",
-        "                    cy[:,i,j] = bbox_relative[:,i,j,2] * self.S + (j * self.S)\n",
+        "            assert (idx_cell_x != None) and (idx_cell_y != None) , \"You need to specify a grid position idx_cell_x and idx_cell_y.\"\n",
+        "            cx_rcell = bbox_relative[:,0]\n",
+        "            cy_rcell = bbox_relative[:,1]\n",
+        "            rw = bbox_relative[:,2]\n",
+        "            rh = bbox_relative[:,3]\n",
         "\n",
-        "        bbox_absolute = torch.concat((x_min, y_min, x_max, y_max), dim=-1)\n",
+        "            cx = cx_rcell * self.S + (idx_cell_x * self.S)\n",
+        "            cy = cy_rcell * self.S + (idx_cell_y * self.S)\n",
+        "\n",
+        "\n",
+        "        cx_abs = self.sizeHW * cx\n",
+        "        cy_abs = self.sizeHW * cy\n",
+        "        x_min = cx_abs - (self.sizeHW * (rw/2))\n",
+        "        y_min = cy_abs - (self.sizeHW * (rh/2))\n",
+        "        x_max = cx_abs + (self.sizeHW * (rw/2))\n",
+        "        y_max = cy_abs + (self.sizeHW * (rh/2))\n",
+        "\n",
+        "        bbox_absolute = torch.stack((x_min, y_min, x_max, y_max), dim=-1)\n",
         "        return bbox_absolute\n",
         "\n",
-        "    def intersection_over_union(self, pred_box, true_box):\n",
+        "    def intersection_over_union(self, pred_box, true_box, idx_cell_x, idx_cell_y):\n",
         "        \"\"\"\n",
         "        args:\n",
         "        pred_box -> shape : [N x S x S x 4]\n",
         "        true_box -> shape : [N x 4]\n",
-        "        \"\"\"\n",
-        "        \n",
-        "        pred_box = self._relative2absolute(pred_box, True)\n",
+        "        \"\"\"        \n",
+        "        pred_box = self._relative2absolute(pred_box, False, idx_cell_x, idx_cell_y)\n",
         "        true_box = self._relative2absolute(true_box, True)\n",
         "        \n",
-        "\n",
-        "        ############ A REVOIR #################\n",
-        "        \"\"\"\n",
-        "        Le true box est OK mais le pred_box doit tenir compte qu'on injecte des \n",
-        "        cellules de grille à chaque fois donc un tensor Nx6x6...\n",
-        "        La méthode doit renvoyer 6x6xB = 6x6x1 IoU numbers (je crois...)\n",
-        "        \"\"\"\n",
-        "        xmin_pred, ymin_pred, xmax_pred, ymax_pred = pred_box\n",
-        "        xmin_true, ymin_true, xmax_true, ymax_true = true_box\n",
+        "        # xmin_pred, ymin_pred, xmax_pred, ymax_pred = pred_box\n",
+        "        # xmin_true, ymin_true, xmax_true, ymax_true = true_box\n",
         "\n",
         "        xmin_pred = pred_box[:,0]\n",
         "        ymin_pred = pred_box[:,1]\n",
@@ -703,13 +681,14 @@
         "        xmax_overlap = torch.minimum(xmax_pred, xmax_true)\n",
         "        ymin_overlap = torch.maximum(ymin_pred, ymin_true)\n",
         "        ymax_overlap = torch.minimum(ymax_pred, ymax_true)\n",
-        "\n",
+        "        \n",
         "        ##########################################\n",
         "\n",
         "        pred_box_area = (xmax_pred - xmin_pred) * (ymax_pred - ymin_pred)\n",
         "        true_box_area = (xmax_true - xmin_true) * (ymax_true - ymin_true)\n",
-        "\n",
-        "        overlap_area = torch.maximum((xmax_overlap - xmin_overlap), torch.Tensor([0]))  * np.maximum((ymax_overlap - ymin_overlap), torch.Tensor([0]))\n",
+        "       \n",
+        "        overlap_area = torch.maximum((xmax_overlap - xmin_overlap), torch.Tensor([0]))  * torch.maximum((ymax_overlap - ymin_overlap), torch.Tensor([0]))\n",
+        "       \n",
         "        union_area = (pred_box_area + true_box_area) - overlap_area\n",
         "        \n",
         "        iou = (overlap_area + smoothing_factor) / (union_area + smoothing_factor)\n",
@@ -728,68 +707,158 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 432,
+      "execution_count": 134,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "model_MNIST = YoloMNIST(sizeHW=75, S=6, C=10, B=1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 157,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "tensor([[1.3740e-13, 1.3345e-13, 1.3103e-13, 1.3116e-13, 1.3404e-13, 1.2593e-13],\n",
+            "        [1.2930e-13, 1.1007e-13, 1.2851e-13, 2.2244e-13, 9.9547e-14, 1.1974e-13],\n",
+            "        [8.5395e-14, 1.1525e-13, 1.2282e-13, 7.9267e-14, 1.3381e-13, 1.3067e-13],\n",
+            "        [1.1036e-13, 1.3298e-13, 1.1461e-13, 1.2491e-13, 1.2464e-13, 1.0379e-13],\n",
+            "        [1.1575e-13, 1.1533e-13, 1.2506e-13, 1.2778e-13, 7.2389e-13, 1.2822e-13],\n",
+            "        [1.2516e-13, 1.1795e-13, 1.4050e-13, 1.2461e-13, 1.4052e-13, 1.2976e-13]],\n",
+            "       grad_fn=<SelectBackward0>)\n"
+          ]
+        }
+      ],
+      "source": [
+        "for i in range(6):\n",
+        "    for j in range(6):\n",
+        "        pc_pred[:,i,j] = model_MNIST.intersection_over_union(bbox_pred[:,i,j], k[2], i, j)\n",
+        "\n",
+        "\n",
+        "print(pc_pred[54])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 158,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "tensor(1.)"
+              "torch.Size([64, 6])"
             ]
           },
-          "execution_count": 432,
+          "execution_count": 158,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "model_MNIST = YoloMNIST(sizeHW=75, S=6, C=10, B=1)\n",
-        "model_MNIST.intersection_over_union(k[2], k[2])[43]"
+        "k[2].shape"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [
         {
-          "ename": "NameError",
-          "evalue": "name 'training_dataset' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[1;32m/Users/thierryksstentini/Documents/Python_divers/GitHub/Food_Recognition/YOLO_MNIST_Localization.ipynb Cellule 17\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/thierryksstentini/Documents/Python_divers/GitHub/Food_Recognition/YOLO_MNIST_Localization.ipynb#X22sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m training_dataset:\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/thierryksstentini/Documents/Python_divers/GitHub/Food_Recognition/YOLO_MNIST_Localization.ipynb#X22sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39mbreak\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/thierryksstentini/Documents/Python_divers/GitHub/Food_Recognition/YOLO_MNIST_Localization.ipynb#X22sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m k\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'training_dataset' is not defined"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "La taille d'un élément est de :  3\n",
+            "Le premier élément est l'image de shape :  torch.Size([64, 1, 75, 75])\n",
+            "Le deuxieme élément est les label de shape :  torch.Size([64, 10])\n",
+            "Le dernier élément est la bbox [xc_rcell, yc_rcell, xc, yc, rw, hw] :  torch.Size([64, 6])\n"
           ]
         }
       ],
       "source": [
         "for k in training_dataset:\n",
         "    break\n",
-        "\n",
-        "k"
+        "print(\"La taille d'un élément est de : \", len(k))\n",
+        "print(\"Le premier élément est l'image de shape : \", k[0].shape)\n",
+        "print(\"Le deuxieme élément est les label de shape : \", k[1].shape)\n",
+        "print(\"Le dernier élément est la bbox [xc_rcell, yc_rcell, xc, yc, rw, hw] : \", k[2].shape)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 366,
+      "execution_count": 78,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "pc_pred, bbox_pred, class_pred = model_MNIST(k[0])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 38,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Le premier élément est une grille de shape :  torch.Size([64, 6, 6])  correspondant aux nombres pc sur les 6x6 cellules\n",
+            "Le deuxieme élement est, une grille de shape :  torch.Size([64, 6, 6, 4])  correspondant aux [xc_rcell, yc_rcell, rw, rh]\n",
+            "Le troisieme élement est, une grille de shape :  torch.Size([64, 6, 6, 10])  correspondant à des softmax vect sur chaque cellule de grille\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"Le premier élément est une grille de shape : \", model_MNIST(k[0])[0].shape, \" correspondant aux nombres pc sur les 6x6 cellules\")\n",
+        "print(\"Le deuxieme élement est, une grille de shape : \", model_MNIST(k[0])[1].shape, \" correspondant aux [xc_rcell, yc_rcell, rw, rh]\")\n",
+        "print(\"Le troisieme élement est, une grille de shape : \", model_MNIST(k[0])[2].shape, \" correspondant à des softmax vect sur chaque cellule de grille\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 58,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "toto = bbox_pred[:, 1, 1]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 59,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "tensor([0.0555, 0.0245, 0.6933, 0.3067, 0.3733, 0.3733])"
+              "torch.Size([64, 4])"
             ]
           },
-          "execution_count": 366,
+          "execution_count": 59,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "model_MNIST = YoloMNIST(sizeHW=75, S=6, C=10, B=1)\n"
+        "toto.shape"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
